.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-ma-lesson-5-deployment
  labels:
    app: otus-ma-lesson-5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-ma-lesson-5
  template:
    metadata:
      labels:
        app: otus-ma-lesson-5
    spec:
      containers:
        - name: otus-ma-lesson-5
          image: kvmayer/otus-ma-lesson-5:latest
          ports:
            - containerPort: 8080
