.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-ma-lesson-5-service
spec:
  selector:
    app: otus-ma-lesson-5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
