.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ma-lesson-5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/kmayer(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-ma-lesson-5-service
                port:
                  number: 80
